add pro editorial context tool and harden catalog responses